--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ nav ul li a {
 }
 
 .joon{
-    display: none;
+    visibility: hidden;
 }
 
 footer {
@@ -244,9 +244,12 @@ footer ul li p {
     }
 
     .joon {
+        visibility: visible;
         color: black;
-        border-width: 2px;
-        width: 30%;
+        border-width: 4px;
+        width: 70%;
+        margin: auto;
+        padding: 150px 0 0 0;
     }
 
     .header-pic img {
@@ -257,8 +260,19 @@ footer ul li p {
         background-position: center;
         background-size: cover;
     }
+    header nav ul {
+
+        display: block;
+        margin: 0 auto;
+        text-align: center; /*IE*/
+        width: fit-content;
+        padding-top: 30px;
+
+
+    }
 
     nav ul li a {
+        margin-top: 10px;
         margin-right: 10px;
         margin-left: 10px;
         font-size: 14px;
