--- a/style.css
+++ b/style.css
@@ -1,87 +1,34 @@
 body{
     background-color: #fffbee;
 }
-.container{
+
+.container1{
     background-color: white;
     width: 100%;
     opacity: 0.95;
     margin: auto;
 }
-
-header .header-banner {
-
-    width: 100%;
-    height: calc(100vh - 500px);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-
-}
-.header-pic{
-    margin-top: 100px;
-}
-
-header .logo {
-
-    display: table-cell;
-    vertical-align: middle;
+.header-banner {
     text-align: center;
-    alignment: center;
-    table-layout: fixed;
-    padding: 1em;
-    position: absolute;
-    margin-top: 100px;
-    margin-left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    font-stretch: expanded;
+    font-size: 0.9rem;
 }
 
-
-header nav ul {
-
-    display: block;
-    margin: 0 auto;
-    text-align: center; /*IE*/
-    width: fit-content;
-    padding-top: 180px;
-
-
+.header-pic{
+    background: url(header.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 40vh;
+    margin: 10px 60px;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
-header nav ul li {
-    display: inline-block;
-    padding: 16px 16px;
-
-}
-
-header h1 {
-
-    font-family: "Gentium Basic", serif;
-    font-weight: 700;
-    font-size: 60px;
-    color: black;
-    line-height: 70px;
-    text-transform: uppercase;
-
-}
-
-header h2 {
-
-    font-family: "Open Sans", sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    letter-spacing: 7px;
-    margin-top: auto;
-    color: black;
-    text-transform: uppercase;
-    padding-left: auto;
-
-}
-
-
-nav ul li a {
-    margin-right: 90px;
-    margin-left: 70px;
+nav a {
+    margin-right: 20px;
+    margin-left: 20px;
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
     font-size: 17px;
@@ -92,24 +39,40 @@ nav ul li a {
 
 }
 
-.joon{
-    visibility: hidden;
+h1 {
+    font-family: "Gentium Basic", serif;
+    font-weight: 700;
+    font-size: 60px;
+    color: black;
+    line-height: 70px;
+    text-transform: uppercase;
+    padding: 20px 20px 0px 20px;
+    text-align: center;
+}
+
+header h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-size: 15px;
+    letter-spacing: 7px;
+    margin-top: auto;
+    color: black;
+    text-transform: uppercase;
+    padding-left: auto;
 }
 
 footer {
-
     overflow: hidden;
     position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color:  #4f4339;
+    background-color: #4f4339;
     color: white;
 
 }
 
 footer ul {
-
     width: fit-content;
     float: left;
     padding-left: 20px;
@@ -117,41 +80,30 @@ footer ul {
 }
 
 footer ul li {
-
     display: block;
-
 }
 
 footer ul li p {
-
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
     font-size: 18px;
     letter-spacing: 2px;
     color: #ffffff;
     text-transform: uppercase;
-
 }
 
 .footer-sm {
-
     width: 32px;
     float: right;
     padding-right: 10px;
-
 }
 
 .footer-sm img {
-
     width: 100%;
     padding: 10px 0 0 0;
-
-
 }
 
-
 .gallery-h2 {
-
     font-family: "Gentium Basic", sans-serif;
     font-weight: 600;
     font-size: 28px;
@@ -160,25 +112,20 @@ footer ul li p {
     color: #3a383d;
     text-transform: uppercase;
     text-align: center;
-
 }
-.gallery-image {
 
+.gallery-image {
     margin: 10px;
     position: relative;
     text-align: center;
-
     -webkit-flex-basis: 300px;
     -moz-flex-basis: 300px;
     flex-basis: 300px;
-
-
 }
 
 .post-header {
 
     /*kujundus*/
-
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
     font-size: 22px;
@@ -194,18 +141,20 @@ footer ul li p {
     top:30%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
 
-}.index-header {
+.index-header {
     margin-top: 270px;
-     padding:5%;
-     text-align: left;
- }
+    padding:5%;
+    text-align: left;
+}
 
 .index-header h2{
     margin-top: 60px;
     text-align: left;
     padding: 0 0 0 0;
 }
+
 .gallery-links {
 
     display: flex;
@@ -228,69 +177,42 @@ footer ul li p {
 
 }
 
-@media only screen and (max-width: 750px) {
+.meist{
+    padding: 0px 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.meist_pealkiri{
+    margin-left: 20px;
+}
+
+.meist section{
+    text-align: left;
+    min-height: 20vh;
+}
 
 
-    .disclaimer {
-
+@media only screen and (min-width: 600px) {
+    main{
+        padding: 0px 50px;
+    }
+    hr{
         display: none;
+    }
+}
 
+@media only screen and (max-width: 600px) {
+
+    hr{
+        margin: 15px 20%;
+        height: 2px;
+        background-color: gray();
     }
 
-    header .header-banner {
-
-        height: calc(100vh - 400px);
-
+    .meist section img{
+        display: none;
     }
 
-    .joon {
-        visibility: visible;
-        color: black;
-        border-width: 4px;
-        width: 70%;
-        margin: auto;
-        padding: 150px 0 0 0;
-    }
-
-    .header-pic img {
-        margin-top: 100px;
-        width: 100%;
-        height: calc(100vh - 500px);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
-    header nav ul {
-
-        display: block;
-        margin: 0 auto;
-        text-align: center; /*IE*/
-        width: fit-content;
-        padding-top: 30px;
-
-
-    }
-
-    nav ul li a {
-        margin-top: 10px;
-        margin-right: 2px;
-        margin-left: 2px;
-        font-size: 12px;
-
-
-    }
-    header h1 {
-
-        padding-top: 50px;
-        font-size: 50px;
-
-    }
-    header h2 {
-
-        font-size: 13px;
-        letter-spacing: 7px;
-        margin-top: auto;
-        padding-left: auto;
-
-    }
 }
