--- a/style.css
+++ b/style.css
@@ -41,11 +41,9 @@ nav a {
 
 h1 {
     font-family: "Gentium Basic", serif;
-    font-weight: 700;
-    font-size: 60px;
+    font-size: 90px;
     color: black;
     line-height: 70px;
-    text-transform: uppercase;
     padding: 20px 20px 0px 20px;
     text-align: center;
 }
@@ -214,5 +212,19 @@ footer ul li p {
     .meist section img{
         display: none;
     }
+
+    header h1{
+        font-size: 40px;
+
+    }
+
+    nav a{
+        font-size: 12px;
+        margin-right: 10px;
+        margin-left: 10px;
+
+    }
+
+    nav {}
 
 }
